Add jsr package name and version

--- a/deno.json
+++ b/deno.json
@@ -1,4 +1,7 @@
 {
+	"name": "@jespertheend/selfsigned",
+	"version": "0.1.0",
+	"exports": "./mod.ts",
 	"fmt": {
 		"lineWidth": 300,
 		"useTabs": true,
